[package]
name = "pokeget"
authors = [ "talwat" ]
version = "1.5.1"
edition = "2021"
description = "Display pokemon sprites in your terminal."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/talwat/pokeget-rs"
homepage = "https://github.com/talwat/pokeget-rs"
repository = "https://github.com/talwat/pokeget-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
clap = { version = "4.5.14", features = ["derive"] }
image = { version = "0.24.9", default-features = false, features = [
    "png",
] }
rand = "0.8.5"
rust-embed = { version = "8.5.0" }
showie = "1.0.1"
