[package]
name = "pokeget"
authors = [ "talwat" ]
version = "1.6.7"
edition = "2021"
description = "Display pokemon sprites in your terminal."
license = "MIT"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["pokemon", "pokeget", "terminal", "colorscripts", "cli"]
documentation = "https://github.com/talwat/pokeget-rs"
homepage = "https://github.com/talwat/pokeget-rs"
repository = "https://github.com/talwat/pokeget-rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.14", features = ["derive"] }
csv = "1.3.0"
image = { version = "0.25.8" }
rand = "0.9.2"
rust-embed = { version = "8.8.0" }
showie = "2.0.1"
